codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---










• Working (0s • esc to interrupt) · read -- tok/s · write -- tok/s

• Messages to be submitted at end of turn
  ↳ Steer submitted while /review was running.

› Ask MidnightCoder to do anything

  gpt-5.5 default · /tmp/project
